updates on projects

--- a/website/index.html
+++ b/website/index.html
@@ -72,16 +72,25 @@
                     <h2 class="mb-5">Projects</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">OkeeReads</h3>
-                            <div>Personal book review manager</div>
-                            <p> <i> Utilized: Node.js, Pug, Bootstrap, MongoDB</i></p>
+                            <h3 class="mb-0">Time Capsule</h3>
+                            <div>Mobile app that stores photos to be released on a certain date</div>
+                            <p> <i> Utilized: Dart, Flutter, Firebase</i></p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">August 2020 - present</span></div>
                     </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Windy Words</h3>
+                            <div>Quote manager tracking themes across my favorite books</div>
+                            <p> <i> Utilized: Node.js, Pug, Bootstrap, MongoDB</i></p>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">September 2020 - present</span></div>
+                    </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Direwolves' Dictionary</h3>
+                            <h3 class="mb-0">Direwolves' Dictionary 0.0.1</h3>
                             <div>Ever-expanding wiki on the popular book series that provides information on the characters and lore of the popular <i> A Song of Ice and Fire</i></div>
+                            <div> Stay tuned for updates on DD 0.1.1</div>
                             <p> <i> Utilized: HTML, CSS, JavaScript</i></p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">June 2020 - August 2020</span></div>
