--- a/website/index.html
+++ b/website/index.html
@@ -62,7 +62,7 @@
                     <p class="mb-0"> Take a look at my resume - it's free.</p>
                     <br>
                     <div class="social-icons">
-                        <a class="social-icon" href="/Aleena-Syed-Resume.pdf"><i class="fas fa-file"></i></a>
+                        <a class="social-icon" href="/assets/img/Aleena-Syed-Resume.pdf"><i class="fas fa-file"></i></a>
                     </div>
                 </div>
             </section>
